[package]
name = "rbdc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1",features=["fs", "net", "rt", "rt-multi-thread", "time", "io-util"]}
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
once_cell = "1.13"
serde = "1"
indexmap = "1"
bytes ="1.1.0"
memchr = "2.5.0"
futures-intrusive = "0.4.0"
futures-core = { version = "0.3.19", default-features = false }
futures-util = {version="0.3.21",features = ["alloc", "sink"]}
futures-channel = {version="0.3.21",default-features = false, features = ["sink", "alloc", "std"] }
rbs = {path="../rbs"}