[package]
name = "rbdc"
version = "0.1.0"
edition = "2021"

[features]
default=["_rt-tokio","_tls-rustls"]
_tls-rustls=["rustls","webpki-roots","rustls-pemfile"]
_rt-tokio=[]
_tls-native-tls=["native-tls","tokio-native-tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1",features=["fs", "net", "rt", "rt-multi-thread", "time", "io-util"]}
tokio-rustls="0.23"
rustls = { version = "0.20.1", features = ["dangerous_configuration"], optional = true }
webpki-roots = { version = "0.22.0", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
log="0.4"
rbson = { version = "2.0.3", features = ["uuid-0_8", "chrono-0_4"] }
once_cell = "1.13"
serde = "1"
serde_json = "1"
indexmap = "1"
bytes ="1.1.0"
memchr = "2.5.0"
futures-intrusive = "0.4.0"
futures-core = { version = "0.3.19", default-features = false }
futures-util = {version="0.3.21",features = ["alloc", "sink"]}
futures-channel = {version="0.3.21",default-features = false, features = ["sink", "alloc", "std"] }
hashlink = "0.8.0"
event-listener = "2.5.2"
crossbeam-queue = "0.3.2"
tokio-native-tls={version = "0.3.0",optional = true}
native-tls={version = "0.2.10",optional = true}
rbs = {path="../rbs"}
fastdate = "0.1"

serde_bytes="0.11.6"
mobc = {version="0.7",default-features=false,features=["tokio"]}
async-trait = "0.1.56"