[package]
name = "rbdc"
version = "4.1.0"
edition = "2021"
description = "The Rust SQL Toolkit and ORM Library. An async, pure Rust SQL crate featuring compile-time Dynamic SQL"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"

[features]
default = ["_rt-tokio", "_tls-rustls"]
_tls-rustls = ["rustls", "webpki-roots", "rustls-pemfile"]
_rt-tokio = []
_tls-native-tls = ["native-tls", "tokio-native-tls"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["fs", "net", "rt", "rt-multi-thread", "time", "io-util"] }
tokio-rustls = "0.23"
rustls = { version = "0.20.1", features = ["dangerous_configuration"], optional = true }
webpki-roots = { version = "0.22.0", optional = true }
rustls-pemfile = { version = "1.0", optional = true }
log = "0.4"
once_cell = "1.13"
serde = "1"
serde_json = "1"
bytes = "1.1.0"
memchr = "2.5.0"
futures-core = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.21", features = ["alloc", "sink"] }
futures-channel = { version = "0.3.21", default-features = false, features = ["sink", "alloc", "std"] }
hashlink = "0.8.0"
tokio-native-tls = { version = "0.3.0", optional = true }
native-tls = { version = "0.2.10", optional = true }
rbs = { version = "4.1", path = "../rbs" }
fastdate = { version = "0.1"}
deadpool = {version="0.9.5", features = ["managed"] }
serde_bytes = "0.11.6"
async-trait = "0.1.56"
uuid = {version="1.1",features = ["v4"]}
itoa = "1.0"