[package]
name = "rbmp-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.byteorder]
version = "1.4.3"

[dependencies.rmp]
version = "0.8.11"

[dependencies.serde]
version = "1.0.136"

[dev-dependencies.serde_bytes]
version = "0.11.5"

[dev-dependencies.serde_derive]
version = "1.0.136"

[badges.maintenance]
status = "passively-maintained"

