[package]
name = "rbmpv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.num-traits]
version = "0.2.14"

[dependencies.rmp]
version = "0.8.8"

[dependencies.serde]
version = "1.0.119"
optional = true

[dependencies.serde_bytes]
version = "0.11.5"
optional = true
[dev-dependencies.quickcheck]
version = "1.0.2"

[features]
with-serde = ["serde", "serde_bytes"]
