[package]
name = "rbs"
version = "0.1.11"
edition = "2021"
description = "Serialization framework for ORM"
readme = "Readme.md"
authors = ["ce <zhuxiujia@qq.com>"]
license = "Apache-2.0"
categories = ["database"]
keywords = ["database", "orm", "mysql", "postgres", "sqlite"]
documentation = "https://rbatis.github.io/rbatis.io"
repository = "https://github.com/rbatis/rbatis"
homepage = "https://rbatis.github.io/rbatis.io"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits = "0.2"
rmp = "0.8"
serde = {version="1.0",features=["derive"]}
serde_bytes = "0.11"
quickcheck = "1.0"
byteorder = "1.4"
serde_derive = "1.0"

[features]

[badges.maintenance]
status = "passively-maintained"

