[package]
name = "example"
version = "0.1.0"
authors = ["zhuxiujia <zhuxiujia@qq.com>"]
edition = "2018"
publish = false

[[bin]]
name = "mssql"
path = "src/mssql/main.rs"

[[bin]]
name = "mysql"
path = "src/mysql/main.rs"

[[bin]]
name = "sqlite"
path = "src/sqlite/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = {version = "1" , features = ["full"]}
rbatis-core = { path = "../",features = ["debug_mode"]}

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
rbson = { version = "2.0", features = ["uuid-0_8", "chrono-0_4"] }
