[package]
name = "rbatis_sql_macro"
version = "4.0.2"
authors = ["zxj_pc <zhuxiujia@qq.com>"]
edition = "2018"
license = "Apache-2.0"
description = "rbatis sql macro system"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_mode = []
[lib]
proc-macro = true
[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
rbatis-sql-util = { version = "4.0", path = "../rbatis-sql-util" }