[package]
name = "rbatis-sql-util"
version = "4.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
debug_mode = []
[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
base64 = "0.13"
async-trait = "0.1"
url = "2.2.2"
html_parser = "0.6.3"